--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "psr/container": "*@stable"
     },
     "require-dev": {
-        "phpunit/phpunit": "*@stable"
+        "phpunit/phpunit": "*@stable",
+        "vmpublishing/psr15-middleware-test-helpers": "*@stable"
     },
     "autoload": {
         "psr-4": {
